fixed spacing of header

--- a/client/style.css
+++ b/client/style.css
@@ -66,3 +66,9 @@
   height:50px;
 }
 
+
+@media only screen and (min-width: 768px) {
+  /* For desktop: */
+  #menu {overflow-x: hidden;}
+}
+
